options cutoff bg fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -60,7 +60,7 @@ select {
 }
 
 .option-button {
-    @apply h-12 rounded-lg mx-1 my-2 shadow shadow-slate-800 bg-slate-700 lg:text-lg;
+    @apply h-12 rounded-lg mx-1 my-2 shadow shadow-slate-800 bg-slate-700 lg:text-lg px-2;
     min-width: 2.5em;
     min-height: 2em;
 }
